--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               </div>
             </div>
         </div>
-        <iframe src="../graph-ui/index.html" width=100% height=500px frameborder="0"></iframe>
+        <iframe src="https://confident-ptolemy-f9a118.netlify.app/" width=100% height=500px frameborder="0"></iframe>
     </body>
     <script src="main.js" type="text/javascript"></script>
 </html>
